--- a/docs/reference-guide/modules/monitoring/pages/metrics.adoc
+++ b/docs/reference-guide/modules/monitoring/pages/metrics.adoc
@@ -18,7 +18,7 @@ Furthermore, the `MessageMonitors` provided by this module are registered agains
 The following monitor implementations are available through **both** modules:
 
 . `CapacityMonitor` - Measures message capacity by keeping track of the total time spent on message handling compared to total time it is active.
-This returns a number between 0 and n number of threads.
+This returns a number between 0 and n, n being the number of threads.
 Thus, if there are 4 threads working, the maximum capacity is 4 if every thread is active 100% of the time.
 . `EventProcessorLatencyMonitor` - Measures the difference between an event's timestamp and the current time, showing how far behind an xref:events:event-processors/index.adoc[event processor] is.
 Note that xref:events:event-processors/streaming.adoc#replaying-events[triggering a reset] will impact this metric!
