Add documentation for command sequencing
Initial attempt for documentation of the command sequencing.

This includes the main feature documentation in the performance tuning section (command-processing.adoc) and adds cross-references from several other chapters (configure command handling, command handling infrastructure, message intercepting)

--- a/docs/reference-guide/modules/commands/pages/configuration.adoc
+++ b/docs/reference-guide/modules/commands/pages/configuration.adoc
@@ -432,6 +432,11 @@ public class InterceptorConfig {
 
 See xref:messaging-concepts:message-intercepting.adoc[Message intercepting] for detailed information on interceptors.
 
+[NOTE]
+====
+**Command sequencing**: Axon Framework 5.0.3+ automatically sequences commands targeting the same entities to prevent optimistic locking failures. This is implemented as a handler interceptor using the configured `CommandSequencingPolicy`. See xref:tuning:command-processing.adoc#command-sequencing[Command sequencing] for configuration options.
+====
+
 == Configuration builder pattern
 
 When using the Configuration API, you typically chain multiple configurers:
