--- a/docs/reference-guide/modules/commands/pages/infrastructure.adoc
+++ b/docs/reference-guide/modules/commands/pages/infrastructure.adoc
@@ -216,6 +216,13 @@ There are two types of interceptors:
 
 See xref:messaging-concepts:message-intercepting.adoc#command-interceptors[Command interceptors] for details on implementing and registering interceptors.
 
+[NOTE]
+====
+**Automatic command sequencing**: The command bus automatically includes a sequencing interceptor that prevents concurrent commands from causing optimistic locking failures. Commands targeting the same entities (same routing key) are processed sequentially while maintaining full concurrency for different entities. This is transparent and requires no configuration in most cases.
+
+For customization options, see xref:tuning:command-processing.adoc#command-sequencing[Command sequencing].
+====
+
 == Command gateway
 
 The command gateway provides a convenient, type-safe API for dispatching commands.
