Adjust command sequencing documentation
Minor improvements based on Sonar/PR feedback
* fix and simplify configuration example in command-processing.adoc
* adjust Javadoc on CommandSequencingPolicy

--- a/docs/reference-guide/modules/tuning/pages/command-processing.adoc
+++ b/docs/reference-guide/modules/tuning/pages/command-processing.adoc
@@ -102,9 +102,7 @@ public class TenantBasedSequencingPolicy implements CommandSequencingPolicy {
     public Optional<Object> getSequenceIdentifierFor(CommandMessage command,
                                                      ProcessingContext context) {
         // Sequence commands by tenant ID from metadata
-        return command.getMetaData().get("tenantId") != null
-            ? Optional.of(command.getMetaData().get("tenantId"))
-            : Optional.empty();
+        return Optional.ofNullable(command.metadata().get("tenantId"));
     }
 }
 ----
