--- a/docs/reference-guide/modules/migration/pages/paths/aggregates/multi-entity-migration.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/aggregates/multi-entity-migration.adoc
@@ -27,7 +27,7 @@ public class GiftCard {
 
     private String cardId;
 
-    @EntityMember // <1>
+    @EntityMember(routingKey = "transactionId") // <1>
     private List<Transaction> transactions = new ArrayList<>();
 
     @CommandHandler
